--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,20 @@
 version: '3'
 services:
-  # api-server:
-  #   build: ./api-server
-  #   ports:
-  #     - "8000:8000"
+  api:
+    build: ./api
+    ports:
+      - "8000:8000"
+    depends_on:
+      - minio
+      - rabbitmq
+      - cache
+  cache:
+    build: ./cache
+    environment:
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+    depends_on:
+      - elasticsearch
+      - rabbitmq
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.4.3
     environment:
@@ -25,3 +36,13 @@ services:
       MINIO_SSE_MASTER_KEY: "my-minio-key:6368616e676520746869732070617373776f726420746f206120736563726574"
     ports:
       - 9000:9000
+  rabbitmq:
+    image: 'bitnami/rabbitmq:3.7'
+    ports:
+      - '4369:4369'
+      - '5672:5672'
+      - '25672:25672'
+      - '15672:15672'
+    environment:
+      - RABBITMQ_USERNAME=user
+      - RABBITMQ_PASSWORD=bitnami
