--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,11 @@ services:
     depends_on:
       - minio
       - rabbitmq
+  crawler:
+    build:
+      context: ./crawler
+    ports:
+      - "5000:5000"
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.4.3
     environment:
