--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: ./api
     environment:
       - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - RABBITMQ=rabbitmq:5672
+      - MINIO=minio:9000
     ports:
       - "8000:8000"
     depends_on:
@@ -14,16 +16,23 @@ services:
     build: ./cache
     environment:
       - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - RABBITMQ=rabbitmq:5672
     depends_on:
       - elasticsearch
       - rabbitmq
   store:
     build: ./store
+    environment:
+      - RABBITMQ=rabbitmq:5672
+      - MINIO=minio:9000
     depends_on:
       - minio
       - rabbitmq
   transform:
     build: ./transform
+    environment:
+      - RABBITMQ=rabbitmq:5672
+      - MINIO=minio:9000
     depends_on:
       - minio
       - rabbitmq
