added initial nudity detection to classify

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,19 @@ services:
       context: ./crawler
     ports:
       - "4444:4444"
+  classify:
+    build:
+      context: ./classify
+    environment:
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - RABBITMQ=rabbitmq:5672
+      - MINIO=minio:9000
+      - NSFWAPI=nsfw_api:5000
+    depends_on:
+      - rabbitmq
+      - elasticsearch
+      - minio
+      - nsfw_api
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.4.3
     environment:
@@ -72,3 +85,11 @@ services:
     environment:
       - RABBITMQ_USERNAME=user
       - RABBITMQ_PASSWORD=bitnami
+  nsfw_api:
+    image: 'eugencepoi/nsfw_api:latest'
+    ports:
+      - '5000:5000'
+    environment:
+      - PORT=5000
+
+
