--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,8 @@ services:
   crawler:
     build:
       context: ./crawler
+    environment:
+      - API=api:8000
     ports:
       - "4444:4444"
   classify:
