--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3'
 services:
+  ui:
+    build:
+      context: ./ui
+    labels:
+      kompose.service.type: LoadBalancer
+    ports:
+      - "7777:7777"
   crawler:
     build:
       context: ./crawler
