--- a/ui/package.json
+++ b/ui/package.json
@@ -12,8 +12,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.4",
     "core-js": "^3.1.2",
-    "vue": "^2.6.10",
-    "vue-gallery": "^2.0.1"
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
