--- a/k8s/cozyish.yml
+++ b/k8s/cozyish.yml
@@ -22,12 +22,8 @@ spec:
         - containerPort: 25672
         - containerPort: 15672
         env:
-        - name: MINIO_ACCESS_KEY
-          value: minioaccesskey
-        - name: MINIO_SECRET_KEY
-          value: miniosecretkey
-        - name: MINIO_SSE_MASTER_KEY
-          value: my-minio-key:6368616e676520746869732070617373776f726420746f206120736563726574
+        - name: RABBITMQ_DISK_FREE_LIMIT
+          value: "{mem_relative, 0.2}"
       
       - name: elasticsearch
         image: docker.elastic.co/elasticsearch/elasticsearch:6.4.3
